# csv_reader

./: CMakeLists.txt  Readme.md
include/: computations.h  config.h  parsing.h
src/: computations.c  main.c  parsing.c
tests/: csvreader_gtest.cpp
